tests/parsing/icnf/errors/003_assumption_unclosed_1.icnf
p inccnf
a 0 0
